2010-08-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in (%.${OBJEXT}): better implicit rules support

2010-08-04  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.9 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.9 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.9 release.

2010-08-04  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c: [Bug 3034840]: Fixed reference counting
	* tests/ioCmd.test: in InvokeTclMethod and callers.

2010-08-03  Andreas Kupries  <andreask@activestate.com>

	* tests/var.test (var-19.1): [Bug 3037525]: Added test
	demonstrating the local hashtable deletion crash and fix.

	* tests/info.test (info-39.1, test_info_frame): Changed absolute
	to relative frame adressing to handle difference between testing
	with -singleproc 1 vs. the default -singleproc 0. Plus comment
	fix. The test and issue are not relevant to the trunk, forward
	porting is not required.

2010-08-03  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.9 release.

2010-08-02  Kevin B. Kenny  <kennykb@users.sf.net>

	* library/tzdata/America/Bahia_Banderas:
	* library/tzdata/Pacific/Chuuk:
	* library/tzdata/Pacific/Pohnpei:
	* library/tzdata/Africa/Cairo:
	* library/tzdata/Europe/Helsinki:
	* library/tzdata/Pacific/Ponape:
	* library/tzdata/Pacific/Truk:
	* library/tzdata/Pacific/Yap:			Olson's tzdata2010k.

2010-07-28  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c: fix for crash [Bug 3037525]: lose fickle
	optimisation in TclDeleteVars (used for runtime-created locals)

2010-07-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h:	[Bug 3030870] make itcl 3.x built with pre-8.6
	* generic/tclBasic.c:	work in 8.6 revert tclInt.h to what it was
	before, and relax the relation between Tcl_CallFrame and CallFrame.
